--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
@@ -1,14 +1,54 @@
-﻿<Window x:Class="InstagramFollowerAnalyzerApp.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:InstagramFollowerAnalyzerApp"
-        mc:Ignorable="d"
-        Title="Instagram Follower Analyzer"
-        Width="1200"
-        Height="600">
+﻿<Window
+    x:Class="InstagramFollowerAnalyzerApp.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:InstagramFollowerAnalyzerApp"
+    xmlns:followerInput="clr-namespace:InstagramFollowerAnalyzerApp.FollowerInput"
+    mc:Ignorable="d"
+    DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ViewModel, Mode=OneTime}"
+    Title="Instagram Follower Analyzer">
+    <Window.Style>
+        <Style TargetType="{x:Type Window}">
+            <Setter Property="Width" Value="1200"/>
+            <Setter Property="Height" Value="600"/>
+        </Style>
+    </Window.Style>
     <Grid>
-    
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel
+            Orientation="Vertical"
+            Grid.Column="0">
+                <followerInput:FollowerInput
+                    Title="Followers"/>
+                
+                <Button
+                    Content="Compare"/>
+
+                <followerInput:FollowerInput
+                    Title="Following"/>
+        </StackPanel>
+
+        <GridSplitter
+            Grid.Column="1"
+            Focusable="False"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Width="5"/>
+
+        <ScrollViewer
+            Grid.Column="2"
+            VerticalScrollBarVisibility="Auto"
+            HorizontalScrollBarVisibility="Auto">
+            <TextBox 
+                Text="Please Compare First"/>
+        </ScrollViewer>
+
     </Grid>
 </Window>
