--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
@@ -18,9 +18,7 @@
         <Label
             Grid.Row="0"
             DataContext="{Binding ElementName=FollowerInputUserControl, Mode=OneTime}"
-            Content="{Binding Title, Mode=OneWay}"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"/>
+            Content="{Binding Title, Mode=OneWay}"/>
 
     </Grid>
 </UserControl>
