--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
@@ -15,6 +15,27 @@
             <Setter Property="Height" Value="600"/>
         </Style>
     </Window.Style>
+
+    <Window.Resources>
+        <Style TargetType="{x:Type GridSplitter}">
+            <Setter Property="Focusable" Value="False"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="Width" Value="5"/>
+        </Style>
+        <Style TargetType="{x:Type ScrollViewer}">
+            <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+            <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+        </Style>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Width" Value="200"/>
+        </Style>
+        <Style TargetType="{x:Type Label}">
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -36,16 +57,10 @@
         </StackPanel>
 
         <GridSplitter
-            Grid.Column="1"
-            Focusable="False"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            Width="5"/>
+            Grid.Column="1"/>
 
         <ScrollViewer
-            Grid.Column="2"
-            VerticalScrollBarVisibility="Auto"
-            HorizontalScrollBarVisibility="Auto">
+            Grid.Column="2">
             <TextBox 
                 Text="Please Compare First"/>
         </ScrollViewer>
