--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
@@ -8,17 +8,30 @@
              DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ViewModel, Mode=OneTime}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="200"/>
         </Grid.RowDefinitions>
 
         <Label
             Grid.Row="0"
             DataContext="{Binding ElementName=FollowerInputUserControl, Mode=OneTime}"
             Content="{Binding Title, Mode=OneWay}"/>
+
+        <Button
+            Grid.Row="1"
+            Content="Browse from file"
+            Click="BrowseFileClick"
+            />
+
+        <ScrollViewer
+            Grid.Row="2">
+            <TextBox 
+                Text="{Binding Followers, Mode=TwoWay}"/>
+        </ScrollViewer>
 
     </Grid>
 </UserControl>
