--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/FollowerInput/FollowerInput.xaml
@@ -30,7 +30,7 @@
         <ScrollViewer
             Grid.Row="2">
             <TextBox 
-                Text="{Binding Followers, Mode=TwoWay}"/>
+                Text="{Binding EntriesToDisplay, Mode=OneWay}"/>
         </ScrollViewer>
 
     </Grid>
