--- a/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
+++ b/InstagramFollowerAnalyzer/InstagramFollowerAnalyzerApp/MainWindow.xaml
@@ -6,13 +6,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:InstagramFollowerAnalyzerApp"
     xmlns:followerInput="clr-namespace:InstagramFollowerAnalyzerApp.FollowerInput"
+    xmlns:report="clr-namespace:InstagramFollowerAnalyzerApp.Report"
     mc:Ignorable="d"
-    DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ViewModel, Mode=OneTime}"
     Title="Instagram Follower Analyzer">
     <Window.Style>
         <Style TargetType="{x:Type Window}">
             <Setter Property="Width" Value="1200"/>
-            <Setter Property="Height" Value="600"/>
+            <Setter Property="Height" Value="800"/>
+            <Setter Property="WindowState" Value="Maximized"/>
         </Style>
     </Window.Style>
 
@@ -75,6 +76,7 @@
 
                     <followerInput:FollowerInput
                         x:Name="FollowingInput"
+                        Margin="0,20,0,0"
                         Title="Following"/>
             </StackPanel>
         </ScrollViewer>
@@ -98,8 +100,24 @@
             
             <ScrollViewer
                 Grid.Column="1">
-                <TextBox 
-                    Text="{Binding ComparisonResult, Mode=OneWay}"/>
+                <StackPanel
+                    Orientation="Vertical">
+
+                    <report:DifferenceReportView
+                        x:Name="FollowersReport"
+                        Title="Followers Report"/>
+
+                    <report:DifferenceReportView
+                        x:Name="FollowingReport"
+                        Margin="0,20,0,0"
+                        Title="Following Report"/>
+
+                    <report:DifferenceReportView
+                        x:Name="DifferenceReport"
+                        Margin="0,20,0,0"
+                        Title="Difference Report"/>
+
+                </StackPanel>
             </ScrollViewer>
         </Grid>
 
